--- a/poznaj_bierki/index.html
+++ b/poznaj_bierki/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style.css">
     
 </head>
-<body>
+<body oncontextmenu="return false;">
     <div id="panel" >
         <h3><img style="vertical-align: bottom" height="73px" width="auto "src="../assets/pionek.png">Szachy.pl</h3>
         
