Updated "Historia szachów"

--- a/historia_szachow/index.html
+++ b/historia_szachow/index.html
@@ -19,7 +19,10 @@
     <div class="content">
         <h1 style="font-size: 35px;">Historia szachów</h1>
         <h1>
-
+            Za miejsce powstania szachow uznaje się Indie. Wiadomo, że ta gra była znana już w latach 70 VI wieku n.e. Oczywiście forma w jakiej znana była wtedy ta gra, mocno różniła się od współczesnej.
+            <br><br>Do Europy szachy trafiły prawdopodobnie za sprawą kupców - pierwsze wzmianki o szachcach w Europie wskazują na Sycylię - następnie ponownie za sprawą handlu trafiły do całej Europy. Europejczycy zmienili reguły na bardziej przypominające współczesne (dodali ruchy takie jak roszada, czy promocja).
+            <br><br>Dopiero w renesansie ponownie zainteresowano się szachami, dopracowano reguły na prawie identyczne do współczesnych. Gra na wysokim poziomie zaczęła również zbierać uwagę publiczności.
+            <br><br>Pierwszy wielki międzynarodowy turniej rozegrano dopiero w 1851, a Miedzynarodowa Federacja Szachowa powstała dopiero w 1924. Następnie powstały komputery szachowe, które bardzo szybko zaczęły wygrywać z mistrzami świata.
         </h1>
         <footer>
             Adam Rafałowski and Franciszek Bartłomiejczyk 2022
