fixed mobile devices user expirience

--- a/historia_szachow/index.html
+++ b/historia_szachow/index.html
@@ -12,21 +12,31 @@
 <body oncontextmenu="return false;">
     <div id="panel" >
         <h3><img style="vertical-align: bottom" height="73px" width="auto "src="../assets/pionek.png">Szachy.pl</h3>
+        <div id="links">
+            <h2><a href="../strona_glowna/index.html">Strona główna</a> <a class="current" href="../historia_szachow/index.html">Historia szachów</a> <a href="../poznaj_bierki/index.html">Poznaj bierki</a> <a href="../zagraj_w_szachy/index.html">Zagraj w szachy</a></h2>
+        </div>
         
-        <h2><a href="../strona_glowna/index.html">Strona główna</a> <a href="../historia_szachow/index.html"  class="current">Historia szachów</a> <a href="../poznaj_bierki/index.html">Poznaj bierki</a> <a href="../zagraj_w_szachy/index.html">Zagraj w szachy</a></h2>
+    </div>
+    <div id="phonepanel">
+        <div id="linksphone">
+            <h2><a href="../strona_glowna/index.html">Strona główna</a> <a class="current" href="../historia_szachow/index.html">Historia szachów</a><br> <a href="../poznaj_bierki/index.html">Poznaj bierki</a> <a href="../zagraj_w_szachy/index.html">Zagraj w szachy</a></h2>
+        </div>
     </div>
     <script src="../onload.js"></script>
     <div class="content">
         <h1 style="font-size: 35px;">Historia szachów</h1>
         <h1>
             Za miejsce powstania szachow uznaje się Indie. Wiadomo, że ta gra była znana już w latach 70 VI wieku n.e. Oczywiście forma w jakiej znana była wtedy ta gra, mocno różniła się od współczesnej.
+            <img class="obrazek" src="../assets/szachy.jpg">
             <br><br>Do Europy szachy trafiły prawdopodobnie za sprawą kupców - pierwsze wzmianki o szachcach w Europie wskazują na Sycylię - następnie ponownie za sprawą handlu trafiły do całej Europy. Europejczycy zmienili reguły na bardziej przypominające współczesne (dodali ruchy takie jak roszada, czy promocja).
             <br><br>Dopiero w renesansie ponownie zainteresowano się szachami, dopracowano reguły na prawie identyczne do współczesnych. Gra na wysokim poziomie zaczęła również zbierać uwagę publiczności.
             <br><br>Pierwszy wielki międzynarodowy turniej rozegrano dopiero w 1851, a Miedzynarodowa Federacja Szachowa powstała dopiero w 1924. Następnie powstały komputery szachowe, które bardzo szybko zaczęły wygrywać z mistrzami świata.
+            <br><br>Dziś po ponad tysiącu lat szachy wciąż cieszą się ogromną populanrością i zainteresowaniem.
         </h1>
         <footer>
             Adam Rafałowski and Franciszek Bartłomiejczyk 2022
         </footer>
+        <br><br><br><br><br><br><br>
     </div>
 </body>
 </html>
