--- a/historia_szachow/index.html
+++ b/historia_szachow/index.html
@@ -8,6 +8,10 @@
     <link rel="icon" type="image/x-icon" href="../assets/icon.png">
     <link rel="stylesheet" href="../style.css">
     
+    <meta name="description" content="A webpage about chess">
+    <meta name="keywords" content="Chess, Szachy, Szachy poradnik">
+    <meta name="author" content="Adam Rafałowski, Franciszek Bartłomiejczyk, Paweł Werbanow">
+    
 </head>
 <body oncontextmenu="return false;">
     <div id="panel" >
@@ -34,7 +38,7 @@
             <br><br>Dziś po ponad tysiącu lat szachy wciąż cieszą się ogromną populanrością i zainteresowaniem.
         </h1>
         <footer>
-            Adam Rafałowski and Franciszek Bartłomiejczyk 2022
+            <a href="../autorzy/autorzy.html">Adam Rafałowski, Franciszek Bartłomiejczyk and Paweł Werbanow 2022 </a>
         </footer>
         <br><br><br><br><br><br><br>
     </div>
